<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">
        <ImageButton
            android:id="@+id/up_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_up_icon"
            android:background="@drawable/button_ripple_effect"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <TextView
            android:id="@+id/track_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No Song Playing"
            android:textSize="16dp"
            android:singleLine="true"/>
        <ImageButton
            android:id="@+id/bar_play_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_play_icon"
            android:background="@drawable/button_ripple_effect"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <ImageButton
            android:id="@+id/bar_next_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_next_icon"
            android:background="@drawable/button_ripple_effect"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/maximized_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/cover_art"
            android:src="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_played"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/last_played_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date goes here"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/last_played_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="time goes here"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/last_played_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="location goes here"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/last_played_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="friend name goes here"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>