<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/album_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/album_tracks_fragment"
        android:visibility="gone"/>

</LinearLayout>
