...
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="@color/colorBackground"
        android:padding="16dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/main_googlesigninbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:buttonSize="wide" />

</LinearLayout>
...
